qtermwidget-2.0.1 / 2024-06-27
===============================
 * Fixed visual artifacts due to a mistake about conversion to `std::wstring` in Qt6 port.

qtermwidget-2.0.0 / 2024-05-17
===============================
 * Ported to Qt6.
 * Used "new" signal/slot syntax.
 * Dropped `#define` for bulk timeouts.
 * Removed KDE `#include`s.
 * Dropped XKB related conditional compilation.
 * Assigned a parent to bulkTimers.
 * Removed unused Screen artifacts.
 * Added shortcuts for appscreen `default.keytab`.
 * Exposed wordCharacters property to QTermWidget API.
 * Fixed cursor positioning issues.
 * Removed `ChildProcessSetup` and directly called `onsetupChildProcess`.
 * Used PyQt6.
 * Fixed deprecated function warning.
 * Removed anchored pattern for email and url.
 * Adapted to Qt6 `QProcess::setChildProcessModifier()`.
 * Used std library find algorithm.
 * Fixed comparison of pointer addition with NULL.

qtermwidget-1.4.0 / 2023-11-05
===============================
 * TERM env variable is set to xterm-256color when not set with QTermWidget::setEnvironment().
 * Add getForegroundProcessId() function to QTermWidget class (to allow terminal apps to check if the user has started a process in the shell and alert them).
 * Ported away from deprecated Qt::MidButton.
 * Added missing initialization of some variables.
 * Fixed mixing of bool and int.
 * Prefer ranged loop for over `while`.
 * Backported a kcoreaddons commit (1fed7e861f73a6ecbed79be4625afa52a5eaaf3b).
 * Replaced old-style cast with static_cast.
 * Properly initialize KProcess members.
 * Use Q_DECLARE_PRIVATE_D instead of custom Q_DECLARE_PRIVATE_MI (backport of kpty commit 3ef0d7d9ed980513fb36265e4d73fd79c07d5131).
 * Use class, not struct, for KPtyDevicePrivate for consistency (backport of kpty commit ad5cf9d348c13d3d27591a66fab9ccf20603daf8).
 * Use std::unique_ptr to manage the pimpl object.