@@ -1,6 +1,6 @@
 {
    "Name" : "QTermWidget",
-   "Version" : "2.0.1",
+   "Version" : "2.1.0",
    "Vendor" : "LXQt",
    "Copyright" : "(C) 2022-2024 LXQt",
    "Url" : "https://github.com/lxqt/qtermwidget",
